--- a/.github/workflows/api-smoke.yml
+++ b/.github/workflows/api-smoke.yml
@@ -1,4 +1,4 @@
-name: API Smoke (TourAPI)
+name: API Smoke (TarRlteTarService1)
 on: { workflow_dispatch: {} }
 
 jobs:
@@ -14,9 +14,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
 
-      - name: Probe multiple hosts/paths (old+new, http+https)
+      - name: Probe areaBasedList1 (https → http, key case both)
         env:
           SERVICE_KEY: ${{ secrets.SERVICE_KEY }}
+          MOBILE_OS: ETC
+          MOBILE_APP: CI-Smoke
+          BASE_YM: "202504"     # ← 문서 예시 값. 필요시 바꿔 쓰세요
+          AREA_CD: "51"         # 강원특별자치도
+          SIGNGU_CD: "51130"    # 원주시
         run: |
           python - <<'PY'
           import os, json, requests, pathlib
@@ -25,62 +30,43 @@ jobs:
           if not svc:
               raise SystemExit("SERVICE_KEY secret not set")
 
-          # 후보 호스트/경로(신형 데이터포털 + 구형 방문코리아)
           HOSTS = [
-            "https://apis.data.go.kr",             # 신형
-            "http://apis.data.go.kr",
-            "https://api.visitkorea.or.kr",        # 구형
-            "http://api.visitkorea.or.kr",
+            "https://apis.data.go.kr",
+            "http://apis.data.go.kr",             # TLS 문제 시 폴백 (문서상 HTTP 허용)
           ]
-          PATHS = [
-            "/B551011/KorService1/areaBasedList1",          # 신형 권장
-            "/B551011/KorService/areaBasedList1",           # 신형 변형
-            "/openapi/service/rest/KorService1/areaBasedList1",  # 구형 권장
-            "/openapi/service/rest/KorService/areaBasedList1",   # 구형 변형
-          ]
+          PATH  = "/B551011/TarRlteTarService1/areaBasedList1"
 
           base_params = {
-            "MobileOS": "ETC",
-            "MobileApp": "CI-Smoke",
+            "MobileOS": os.environ.get("MOBILE_OS","ETC"),
+            "MobileApp": os.environ.get("MOBILE_APP","CI-Smoke"),
             "_type": "json",
-            "areaCode": 1,
+            "baseYm": os.environ.get("BASE_YM","202504"),
+            "areaCd": os.environ.get("AREA_CD","51"),
+            "signguCd": os.environ.get("SIGNGU_CD","51130"),
             "numOfRows": 5,
             "pageNo": 1,
-            "listYN": "Y",
-            "arrange": "A",
           }
+
           headers = {"Accept": "application/json,*/*", "User-Agent": "ci-smoke/1.0"}
 
-          def try_call(url):
-            # 1) 소문자 serviceKey 로 시도
+          def call(url: str, key_name: str):
             params = dict(base_params)
-            url1 = url
             if "%" in svc:
-              url1 = f"{url1}?serviceKey={svc}"
+              full = f"{url}?{key_name}={svc}"
+              return requests.get(full, params=params, timeout=25, headers=headers)
             else:
-              params["serviceKey"] = svc
-            r = requests.get(url1, params=params, timeout=25, headers=headers, allow_redirects=True)
-            if "json" in (r.headers.get("content-type") or "").lower():
-              return r
-
-            # 2) 대문자 ServiceKey 로 재시도(구형 엔드포인트 호환)
-            params = dict(base_params)
-            url2 = url
-            if "%" in svc:
-              url2 = f"{url2}?ServiceKey={svc}"
-            else:
-              params["ServiceKey"] = svc
-            r2 = requests.get(url2, params=params, timeout=25, headers=headers, allow_redirects=True)
-            return r2
+              params[key_name] = svc
+              return requests.get(url, params=params, timeout=25, headers=headers)
 
           pathlib.Path("out").mkdir(exist_ok=True)
           logs, winner = [], None
+
           for host in HOSTS:
-            for path in PATHS:
-              url = host + path
+            url = host + PATH
+            for key_name in ("serviceKey","ServiceKey"):  # 대/소문자 모두 시도
               try:
-                r = try_call(url)
-                logs.append(f"try {url} -> {r.status_code} {r.headers.get('content-type')}")
+                r = call(url, key_name)
+                logs.append(f"try {url} [{key_name}] -> {r.status_code} {r.headers.get('content-type')}")
                 ctype = (r.headers.get("content-type") or "").lower()
                 if "json" not in ctype:
                   open("out/last_non_json.txt","w",encoding="utf-8").write(r.text)
@@ -88,30 +74,28 @@ jobs:
                 data = r.json()
                 code = (((data.get("response") or {}).get("header")) or {}).get("resultCode")
                 if code == "0000":
-                  winner = (url, data); raise StopIteration
+                  winner = (url, key_name, data); break
                 else:
                   open("out/last_json.json","w",encoding="utf-8").write(json.dumps(data, ensure_ascii=False, indent=2))
-              except StopIteration:
-                break
               except Exception as e:
-                logs.append(f"error {url}: {e!r}")
+                logs.append(f"error {url} [{key_name}]: {e!r}")
                 continue
             if winner: break
 
           open("out/attempts.log","w").write("\n".join(logs))
           if not winner:
-            raise SystemExit("No candidate returned valid JSON with code=0000")
+            raise SystemExit("No valid JSON with code=0000")
 
-          url, data = winner
+          url, key_name, data = winner
           items = (((data.get("response") or {}).get("body") or {}).get("items") or {}).get("item") or []
           if isinstance(items, dict): items = [items]
           open("out/pois.json","w",encoding="utf-8").write(json.dumps(items, ensure_ascii=False, indent=2))
-          open("out/winner.txt","w").write(url)
+          open("out/winner.txt","w").write(f"{url} [{key_name}]")
           print("[OK] winner:", url, "count:", len(items))
           PY
 
       - name: Upload artifacts
-        if: always
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: api-smoke-output
